--- a/css/SJ.css
+++ b/css/SJ.css
@@ -203,22 +203,48 @@ html {
 /*               BANNER               */
 /* ********************************** */
 .banner {
-	background-image:
-		url('../css/img/Baner\ WEB.png');
-	height: 60rem;
-	background-size: cover;
-	background-position: center;
+	background-image: url('../css/img/Baner\ WEB.png');
+	background-repeat:no-repeat;
+	background-size:contain;
+	background-position:center;
+	background-size: 100% 100%;
+	height: 500px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+@media (max-width: 800px) {
+	.banner {
+		height: 425px;
+	}
+}
+
+@media (max-width: 600px) {
+	.banner {
+		height: 350px;
+	}
+}
+
+@media (max-width: 425px) {
+	.banner {
+		height: 250px;
+	}
+}
+
+@media (max-width: 345px) {
+	.content-banner h2 {
+		font-size: 2.5rem !important;
+	}
 }
 
 .content-banner {
-	max-width: 90rem;
-	margin: 0 auto;
-	padding: 25rem 0;
+	width: 80%;
 }
 
 .content-banner p {
 	color: var(--primary-color);
-	font-size: 1.2rem;
+	font-size: 2rem;
 	margin-bottom: 1rem;
 	font-weight: 500;
 }
