--- a/css/SJ.css
+++ b/css/SJ.css
@@ -456,6 +456,12 @@ html {
 	width: 100%;
 }
 
+/* Remove bg img */
+.container-img img {
+	filter: brightness(100%);
+	mix-blend-mode: multiply;
+}
+
 .container-img .discount {
 	position: absolute;
 	left: 0;
@@ -629,8 +635,14 @@ html {
 
 .container-blogs {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 3rem;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-gap: 3rem;
+}
+
+@media (max-width: 600px) {
+	.container-blogs {
+		grid-template-columns: 1fr;
+	}
 }
 
 .card-blog {
@@ -978,13 +990,6 @@ html {
 		grid-template-rows: repeat(2, 15rem);
 	}
 
-	.container-blogs {
-		overflow: hidden;
-		grid-template-columns: 1fr 1fr;
-
-		height: 52rem;
-	}
-
 	.menu-footer {
 		grid-template-columns: repeat(2, 1fr);
 	}
@@ -1058,11 +1063,6 @@ html {
 
 	.blogs {
 		padding: 2rem;
-	}
-
-	.container-blogs {
-		grid-template-columns: 1fr;
-		height: 75rem;
 	}
 
 	.content-blog h3 {
