--- a/css/SJ.css
+++ b/css/SJ.css
@@ -346,7 +346,7 @@ html {
 
 .category-moca {
 	background-image: linear-gradient(#00000080, #00000080),
-		url('../css/img/Diseño\ sin\ título\ \(1\).png');
+		url('../css/img/CocoSonriendo.png');
 	background-size: cover;
 	background-position: bottom;
 	background-repeat: no-repeat;
@@ -354,7 +354,7 @@ html {
 
 .category-capuchino {
 	background-image: linear-gradient(#00000080, #00000080),
-		url('../css/img/Diseño\ sin\ título\ \(2\).png');
+		url('../css/img/sorbeteFeo.png  ');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -362,7 +362,7 @@ html {
 
 .category-expreso {
 	background-image: linear-gradient(#00000080, #00000080),
-		url('../css/img/Diseño\ sin\ título.png');
+		url('../css/img/Dulces.jpg');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
